--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-order-list-page/duraform-order-list-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-order-list-page/duraform-order-list-page.component.html
@@ -202,7 +202,7 @@
           </td>
           <td (click)="onSelectOrder(order.id)">{{ order.deliveryNote }}</td>
           <td (click)="onSelectOrder(order.id)">
-            {{ order.timeInSystem }}
+            {{ order.hasBeenInvoiced ? "Complete" : order.timeInSystem }}
           </td>
           <td (click)="onSelectOrder(order.id)">
             {{ order.statusDescription }}
