--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process-viewer/duraform-process-viewer.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process-viewer/duraform-process-viewer.component.html
@@ -67,20 +67,7 @@
               -- : --
             </span>
           </div>
-          <div class="col-1-3">
-            <span class="dpv__process__time-title">Duration:</span>
-            <span class="dpv__process__time-value">
-              <span>
-                <app-simple-timer
-                  *ngIf="process.startTime && !process.endTime"
-                  [startPoint]="process.startTime"
-                ></app-simple-timer>
-              </span>
-              <span *ngIf="process.startTime && process.endTime">
-                {{ process.getDuration() }}
-              </span>
-            </span>
-          </div>
+          <div class="col-1-3"></div>
         </div>
       </div>
     </li>
