--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/login-page/login-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <div class="login-page">
   <div class="login-page__container">
-    <app-login-form (loginCallback)="onLoginCallback()"></app-login-form>
+    <app-login-form></app-login-form>
     <div class="login-page__footer">
       <p class="paragraph">
         JanperCab &copy; {{ currentYear }} For Janper <br />
