--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/machine-list-page/machine-list-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/machine-list-page/machine-list-page.component.html
@@ -22,7 +22,7 @@
     ></app-machine-packing-controller>
   </app-float-box>
   <app-simple-box [heading]="'Machine List'" [height]="'100%'">
-    <table class="table table--hovered table--sortable">
+    <table class="table table--hovered table--sortable machine-table">
       <thead>
         <tr>
           <th style="width: 5rem">ID</th>
