--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_machine-router-controller.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_machine-router-controller.scss
@@ -34,4 +34,10 @@
     padding: 1rem 0;
     text-align: right;
   }
+
+  @media print {
+    position: fixed;
+    overflow: hidden;
+    width: 0;
+  }
 }
