--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/delivery-page/delivery-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/delivery-page/delivery-page.component.html
@@ -47,6 +47,15 @@
   <app-pdf-viewer *ngIf="showRunSheetPdf" (closePanel)="onCloseRunSheetPdf()">
     <app-run-sheet-pdf [sheetId]="selectedSheet.id"></app-run-sheet-pdf>
   </app-pdf-viewer>
+  <app-pdf-viewer
+    *ngIf="deliveryDocket"
+    [documentName]="'Delivery-Docket'"
+    (closePanel)="deliveryDocket = null; canScan = true"
+  >
+    <app-duraform-delivery-docket
+      [duraformEnquiry]="deliveryDocket"
+    ></app-duraform-delivery-docket>
+  </app-pdf-viewer>
   <div class="delivery-page__content">
     <app-simple-box [heading]="'Delivery Run Sheets'">
       <div class="delivery-page__header">
