Fixed order list which doesn't display correctly per status type

--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/delivery-page/delivery-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/delivery-page/delivery-page.component.html
@@ -78,7 +78,7 @@
           (click)="selectedSheet = null; showShippingSheetForm = true"
         >
           <i class="fa fa-car" aria-hidden="true"></i>
-          Shipping
+          Delivery
         </button>
         <button
           class="btn btn--secondary"
@@ -128,7 +128,7 @@
                   class="text-blue"
                   *ngIf="sheet.deliveryMethod === method.Shipping"
                 >
-                  <b>Shipping</b>
+                  <b>Delivery</b>
                 </span>
                 <span
                   class="text-alert"
