--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -59,6 +59,7 @@
 @import "./3-component/control-box";
 @import "./3-component/on-hold-detail-form";
 @import "./3-component/packing-label-pdf";
+@import "./3-component/value-confirm-dialog";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
