--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
@@ -14,7 +14,7 @@ app-duraform-order-step-three {
     flex-direction: column;
     margin-left: 1rem;
     overflow-y: auto;
-    width: 25rem;
+    width: 27rem;
 
     @include hide-scrollbar;
 
@@ -88,7 +88,7 @@ app-duraform-order-step-three {
         }
 
         &.summary-box__total-line {
-          font-size: 1.8rem;
+          font-size: 1.6rem;
         }
       }
 
@@ -96,28 +96,30 @@ app-duraform-order-step-three {
         align-items: center;
         display: flex;
         flex: 1;
+        min-width: fit-content;
       }
 
       &__subtotal {
         font-weight: bold;
         text-align: right;
-
-        .object-editor {
-          display: inline-block;
-          max-width: 70%;
-
-          .form__control {
-            background-color: rgba(yellow, 0.2);
-            border-radius: unset;
-            padding: 0.5rem;
-            font-weight: bold;
-          }
-        }
       }
 
       &__total {
         color: $red-primary;
         font-weight: bold;
+        text-align: right;
+      }
+
+      .object-editor {
+        display: inline-block;
+        max-width: 70%;
+
+        .form__control {
+          background-color: rgba(yellow, 0.2);
+          border-radius: unset;
+          padding: 0.5rem;
+          font-weight: bold;
+        }
       }
     }
 
