--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
@@ -182,37 +182,67 @@
     & > input[type="checkbox"] {
       left: -999.9rem;
       position: absolute;
-    }
 
-    & > span {
-      &::after {
-        align-items: center;
-        border: solid 1px $text-default;
-        border-radius: 0.3rem;
-        background-color: white;
-        content: "\f00c";
-        color: transparent;
-        display: inline-flex;
-        font-family: "FontAwesome";
-        height: 2rem;
-        justify-content: center;
-        transition: transform 0.2s ease;
-        width: 2rem;
+      & ~ span {
+        &::after {
+          align-items: center;
+          border: solid 1px $text-default;
+          border-radius: 0.3rem;
+          background-color: white;
+          content: "\f00c";
+          color: transparent;
+          display: inline-flex;
+          font-family: "FontAwesome";
+          height: 2rem;
+          justify-content: center;
+          transition: transform 0.2s ease;
+          width: 2rem;
+        }
+      }
+
+      &:focus ~ span {
+        &::after {
+          border-color: blue;
+          transform: scale(1.3);
+        }
+      }
+
+      &:checked ~ span {
+        &::after {
+          color: $red-primary;
+        }
       }
     }
 
-    & > input[type="checkbox"]:focus ~ span {
-      &::after {
-        border-color: blue;
-        transform: scale(1.3);
-      }
-    }
+    // & > input[type="checkbox"] ~ span {
+    //   &::after {
+    //     align-items: center;
+    //     border: solid 1px $text-default;
+    //     border-radius: 0.3rem;
+    //     background-color: white;
+    //     content: "\f00c";
+    //     color: transparent;
+    //     display: inline-flex;
+    //     font-family: "FontAwesome";
+    //     height: 2rem;
+    //     justify-content: center;
+    //     transition: transform 0.2s ease;
+    //     width: 2rem;
+    //   }
+    // }
 
-    & > input[type="checkbox"]:checked ~ span {
-      &::after {
-        color: $red-primary;
-      }
-    }
+    // & > input[type="checkbox"]:focus ~ span {
+    //   &::after {
+    //     border-color: blue;
+    //     transform: scale(1.3);
+    //   }
+    // }
+
+    // & > input[type="checkbox"]:checked ~ span {
+    //   &::after {
+    //     color: $red-primary;
+    //   }
+    // }
   }
 
   &__order-form-group &__control {
