--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
@@ -245,6 +245,22 @@
     // }
   }
 
+  &__datepicker {
+    & > input[type="text"] {
+      border-radius: 0.3rem;
+      border: solid 1px rgba(black, 0.3);
+      color: black;
+      display: block;
+      font-size: inherit;
+      padding: 1rem;
+      width: 100%;
+    }
+
+    .calendar-container {
+      top: calc(100% + 1rem) !important;
+    }
+  }
+
   &__order-form-group &__control {
     border: solid 1px black;
     background-color: rgba(yellow, 0.2);
