Finished Daily Invoice report

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -150,7 +150,7 @@
                   Daily Orders
                 </a>
               </li>
-              <li>
+              <li (click)="layoutService.toggleLeftNav(true)">
                 <a [routerLink]="['/dashboard/reports/daily-invoices']">
                   <i
                     class="fa fa-credit-card text-purple"
