Finished Tally report

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -159,6 +159,12 @@
                   Daily Invoices
                 </a>
               </li>
+              <li (click)="layoutService.toggleLeftNav(true)">
+                <a [routerLink]="['/dashboard/reports/monthly-tally']">
+                  <i class="fa fa-bar-chart text-blue" aria-hidden="true"></i>
+                  Tally Report
+                </a>
+              </li>
             </ul>
           </div>
         </a>
