--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -60,6 +60,7 @@
 @import "./3-component/on-hold-detail-form";
 @import "./3-component/packing-label-pdf";
 @import "./3-component/value-confirm-dialog";
+@import "./3-component/cash-payment-maker";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
